--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@
      
 }
 
+/* header */
+
 header {
     height:500px;
     background-image: url('../img/jumbo.png');
@@ -22,15 +24,13 @@ header {
     
 }
 
-
-
 nav{
     display: flex;
     gap: 200px;
 
 }
 
-#logo{
+.logo{
 
     display: flex;
     justify-content: flex-start;
@@ -49,10 +49,6 @@ nav{
 }
 
 #menu ul{
-    
-    
-    
-    /* /test */
     list-style-type: none;
     display: flex;
     justify-content: space-between;
@@ -60,12 +56,9 @@ nav{
 }
 
 #menu ul li{
-    
-    
+   
     color: white;
     display: flex;
-    
-    /* /test */
     list-style-type: none;
     flex-direction: column;
     justify-content: space-between;
@@ -113,40 +106,32 @@ button{
     color: wheat;
 }
 
+/* /header */
+
+/* main */
 main{
     background-color: aqua;
 }
 
 .contain{
-    height: 400px;
-    background-color: crimson;
+    align-items: center;
     display: flex;
 }
 
 .contain article{
-    background-color: darkgreen;
     
-    
-    /* /test */
     flex-grow: 1;
 }
-.contain img{
-    background-color: black;
-    width: 60%;
+
+.end-contain{
+    text-align: center;
+
 }
 
 footer{
     background-color: gray;
 }
 
-.end-contain{
-    height: 200px;
-    background-color: deeppink;
-    
-    /* /test */
-    text-align: center;
-
-}
 
 .flex{
     display: flex;
@@ -185,13 +170,13 @@ footer{
 
     
 }
-#logo2{
+/* #logo2{
     height: 50px;
     min-width: 100px;
     background-color: blueviolet;
-    /* /test */
+    
     align-items: flex-end;
-}
+} */
 #register{
     height: 50px;
     min-width: 100px;
