--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html{
+    font-family: 'Roboto', sans-serif;
+}
+
 .body-pag{
     
     max-width: 1000px;
@@ -12,6 +16,10 @@
 }
 
 /* header */
+
+.flex{
+    display: flex;
+}
 
 header {
     height:500px;
@@ -103,10 +111,12 @@ button{
 
 .btn-secondary{
     background-color: #23272a;
-    color: wheat;
+    color: white;
 }
+
 .blue{
     background-color: #7289da;
+    color: white;
 }
 
 /* /header */
@@ -141,51 +151,55 @@ h2,p{
 
 }
 
+/* footer */
+
 footer{
-    background-color: gray;
+    padding-top: 50px; 
+    background-color: #23272a;
+    color: white;
 }
 
-
-.flex{
-    display: flex;
+footer strong,#social h3{
+    color: #7289da;
 }
+
 
 .list{
-    background-color: brown;
-    
     display: flex;
     justify-content: space-between;
-   
+    flex-grow: 1;
 }
 
 .list ul {
     list-style-type: none;
     flex-direction: row;
-    border: 1px solid white
+}
+
+.list ul li{
+    padding: 5px 0;
 }
 
 #social div img{
     width: 20px;
     height: 15px;
- 
+}
+
+#footer-right{
+    flex-direction: row;
+    display: flex;
+    width: 100%;
+}
+
+hr{
+    border: 1px solid #7289da;
 }
 
 #end-bar{
-
-    height: 50px;
-    background-color: blue;
-    /* /test */
     display: flex;
-    justify-content: space-between;
-
-    
+    justify-content: space-between;   
+    padding-bottom: 2em;
 }
 
-#register{
-    height: 50px;
-    min-width: 100px;
-    background-color: rgb(43, 226, 113);
-    /* /test */
+.btn-primary{   
     align-items: flex-end;
-
 }
