--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,7 @@ button{
     padding: 10px;
     border-radius: 20px;
     border: none;
+
 }
 
 .btn-secondary{
@@ -215,3 +216,6 @@ hr{
     align-items: flex-end;
 }
 
+#menu ul li:hover,button:hover{
+    background-color: rgb(0, 157, 255);
+}
