--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ nav{
     
 }
 
-
+/* --------bottoni---------- */
 button{
     margin-top: 10px;
     padding: 10px;
@@ -110,15 +110,25 @@ button{
 
 }
 
+.btn-primary{   
+    align-items: flex-end;
+}
+a{
+    text-decoration: none;
+
+}
 .btn-secondary{
     background-color: #23272a;
     color: white;
 }
 
+
 .blue{
     background-color: #7289da;
     color: white;
 }
+
+/* --------bottoni---------- */
 
 /* /header */
 
@@ -212,10 +222,7 @@ hr{
     padding-bottom: 2em;
 }
 
-.btn-primary{   
-    align-items: flex-end;
-}
 
-#menu ul li:hover,button:hover{
+#menu ul li:hover,button:hover,.logo:hover{
     background-color: rgb(0, 157, 255);
 }
